add binary and documentation